[gd_scene load_steps=17 format=3 uid="uid://pgis8iaqgulj"]

[ext_resource type="Script" uid="uid://72elibq1ggn1" path="res://scripts/menu_pausa.gd" id="1_pvenc"]
[ext_resource type="Shader" uid="uid://df8lx5c0f8g3h" path="res://scripts/menu_pausa.gdshader" id="1_uabni"]
[ext_resource type="Texture2D" uid="uid://ccf45yybp0sd3" path="res://imagenes/humanGray.png" id="2_d8q0v"]
[ext_resource type="Texture2D" uid="uid://pakpxiktu5vg" path="res://imagenes/Enviar.png" id="2_tuklk"]
[ext_resource type="Texture2D" uid="uid://duuj7ocfmaxdx" path="res://escenas/humanWhite.png" id="3_2jxr5"]
[ext_resource type="Texture2D" uid="uid://bsrpptu03w5dc" path="res://imagenes/EnviarGray.png" id="4_uabni"]
[ext_resource type="Texture2D" uid="uid://w1kx7q0dqdrp" path="res://imagenes/iaGray.png" id="6_d8q0v"]
[ext_resource type="Texture2D" uid="uid://df6odnjdwyr4b" path="res://imagenes/iaWhite.png" id="7_mcbxj"]
[ext_resource type="PackedScene" uid="uid://fanym5lkreub" path="res://escenas/mensajeConfirmacion.tscn" id="9_x31go"]
[ext_resource type="PackedScene" uid="uid://timpyti7b1ib" path="res://escenas/ConfirmacionReiniciar.tscn" id="10_2jxr5"]
[ext_resource type="AudioStream" uid="uid://cjfix01450ht4" path="res://sonidos/sfx/sndClick.wav" id="11_mcbxj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_pvenc"]
shader = ExtResource("1_uabni")
shader_parameter/lod = 0.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mcbxj"]
bg_color = Color(0.1728327, 0.17283267, 0.17283267, 0.98039216)

[sub_resource type="Animation" id="Animation_pvenc"]
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.800000038]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_uabni"]
resource_name = "blur"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:material:shader_parameter/lod")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0000000475, 0.800000038]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PanelContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_x31go"]
_data = {
&"RESET": SubResource("Animation_pvenc"),
&"blur": SubResource("Animation_uabni")
}

[node name="menuPausa" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pvenc")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_pvenc")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 147.0
offset_bottom = -175.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_mcbxj")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="TextureButtonExit" type="TextureButton" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_2jxr5")
texture_hover = ExtResource("2_d8q0v")
stretch_mode = 5

[node name="TextureButtonPlay" type="TextureButton" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_tuklk")
texture_hover = ExtResource("4_uabni")
stretch_mode = 5

[node name="TextureButtonRestart" type="TextureButton" parent="PanelContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("7_mcbxj")
texture_hover = ExtResource("6_d8q0v")
stretch_mode = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_x31go")
}

[node name="MensajeConfirmacion" parent="." instance=ExtResource("9_x31go")]
visible = false
layout_mode = 1

[node name="ConfirmacionReiniciar" parent="." instance=ExtResource("10_2jxr5")]
visible = false
layout_mode = 1

[node name="sndClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_mcbxj")
bus = &"SFX"

[connection signal="pressed" from="PanelContainer/HBoxContainer/TextureButtonExit" to="." method="_on_texture_button_exit_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/TextureButtonPlay" to="." method="_on_texture_button_play_pressed"]
[connection signal="pressed" from="PanelContainer/HBoxContainer/TextureButtonRestart" to="." method="_on_texture_button_restart_pressed"]
